# o3rg

./: Cargo.toml  README.md  o3rg.pyi  pyproject.toml  test.py
bench/: README.md  benchmark.py  pure_python.py
src/: error.rs  lib.rs  search.rs
tests/: search_tests.rs
